[package]
name = "lemma"
version = "0.1.0"
authors = ["David Cornelis Groothuizen Dijkema <d.groothuizen.dijkema@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rstest = "0.6"
proptest = "0.9.5"